--- a/Model_to_ONNX.ipynb
+++ b/Model_to_ONNX.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "name": "Model_to_ONNX.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPNTU7zayCgtlvdnPYtDUfp",
+      "collapsed_sections": [
+        "v1oDeyTsqLCF"
+      ],
+      "authorship_tag": "ABX9TyPq1GxLTl0TBsVQZ+gEXECL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -378,9 +380,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "https://colab.research.google.com/github/pytorch/tutorials/blob/gh-pages/_downloads/8c7f0be1e1c3803fcb4c41bcd9f4226b/super_resolution_with_onnxruntime.ipynb\n",
+        "# Sources\n",
         "\n",
-        "https://pytorch.org/docs/master/onnx.html#example-alexnet-from-pytorch-to-onnx"
+        "[Exporting a Model from PyTorch to ONNX and Running it using ONNX Runtime](https://colab.research.google.com/github/pytorch/tutorials/blob/gh-pages/_downloads/8c7f0be1e1c3803fcb4c41bcd9f4226b/super_resolution_with_onnxruntime.ipynb)\n",
+        "\n",
+        "[ONNX Documentation - Example: AlexNet from PyTorch to ONNX](https://pytorch.org/docs/master/onnx.html#example-alexnet-from-pytorch-to-onnx)"
       ],
       "metadata": {
         "id": "g0-4SDy3Rm4U"
